<resources>
    <string name="app_name">Tomato</string>
    <string name="error">Error</string>
    <string name="generic_server_down">Server is down, try it later</string>
    <string name="generic_error">Unknown error, please contact pentaValue supporting team</string>
    <string name="no_internet">No internet connection, please try it later</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="change_password">Change Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="barcode_scanning">Scan barcode</string>
    <string name="arabic">عربي</string>
    <string name="english">English</string>
    <string name="don_t_have_account_sign_up">Don\'t have account, Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="skip_login"><u>Skip Login</u></string>
    <string name="forgot_password"><u>Forgot Password</u></string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_username">Please enter your username</string>
    <string name="enter_password">Please enter your password</string>
    <string name="generate">Generate</string>
    <string name="email">Email</string>
    <string name="we_will_send_you_your_new_password_by_email">We will send you your new password by email</string>
    <string name="enter_email">Please enter your email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="we_may_call_for_validation_especially_after_first_order">We may call for validation, especially after first order.</string>
    <string name="gender">Gender</string>
    <string name="add_delivery_address">Add Delivery Address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dd_mm_yy">DD/MM/YY</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="valid_email">Please enter valid email</string>
    <string name="valid_password">Please enter 7 numbers for your password</string>


    <string name="enter_firstname">Please enter your first name</string>
    <string name="enter_lastname">Please enter your last name</string>
    <string name="enter_confirmpassword">Please enter your confirm password</string>
    <string name="enter_phonenumber">Please enter your phone number</string>
    <string name="enter_birthdate">Please enter your birth date</string>
    <string name="shipping_address_name">Shipping Address Name</string>
    <string name="block_number">Block Number</string>
    <string name="apartment_number">Apartment Number</string>
    <string name="floor">Floor</string>
    <string name="building_number">Building Number</string>
    <string name="street_name">Street Name</string>
    <string name="address_type">Address Type</string>
    <string name="apartment">Apartment</string>
    <string name="house">House</string>
    <string name="office">Office</string>
    <string name="extra_direction">Extra Direction</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="enter_shipping_address">Please enter shipping address</string>
    <string name="enter_block_number">Please enter block number</string>
    <string name="enter_street_name">Please enter street number</string>
    <string name="enter_building_number">Please enter building number</string>
    <string name="enter_floor">Please enter floor</string>
    <string name="enter_apartmentnumber">Please enter apartment number</string>
    <string name="enter_extra_direction">Please enter extra direction</string>
    <string name="ok">Ok</string>
    <string name="you_have_successfuly_signed_up">You have successfuly signed up</string>
    <string name="loading">Loading....</string>
    <string name="change">Change</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>

    <string name="enter_oldpassword">Please enter your old password</string>
    <string name="enter_newpassword">Please enter your new password</string>
    <string name="password_and_confirm_notEqual">Your password and confirmation password are not equal</string>
    <string name="view_profile_manage_addresses">View profile manage addresses</string>
    <string name="browse_supermarkets">Browse supermarkets</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="_01002597935">01002597935</string>
    <string name="info_tomato_com">info@tomato.com</string>
    <string name="visit_our_facebook_page">Visit our facebook page</string>
    <string name="www_tomatogroceries_com">www.tomatogroceries.com</string>
    <string name="vision">Vision</string>
    <string name="goals">Goals</string>
    <string name="test">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="cairo">Cairo</string>
    <string name="set_your_location">Set your location</string>
    <string name="maadi">Maadi</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="shopping">Shopping</string>
    <string name="location">Location</string>
    <string name="search">Search</string>
    <string name="Server_API_Key">AIzaSyDv3TIKwWL1AMzIcrr0yk8Rt3G1zhze2bw</string>
    <string name="Sender_ID">524887308152</string>
    <string name="my_addresses">My Addresses</string>
    <string name="add_address">Add Address</string>
    <string name="address_name">Address Name</string>
    <string name="address_description">Address Description</string>
    <string name="no_data">No data found</string>
    <string name="select_city_first">Please select city first</string>
    <string name="profile_empty">This user not available right now</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_address">Edit Address</string>
    <string name="search_supermarkets">Search Supermarkets</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="deals">Deals</string>
    <string name="cash_depit_credit">Cash/Depit/Credit</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="delivery_fees">Delivery Fees</string>
    <string name="open">Open</string>
    <string name="to_10_00am">To 10:00am</string>
    <string name="from_8_00am">From 8:00am</string>
    <string name="al_salam_market">Al Salam Market</string>
    <string name="all_items">All items</string>
    <string name="scan_barcode">Scan barcode</string>
    <string name="specials">Specials</string>
    <string name="my_orders">My orders</string>
    <string name="favorites_items">Favorites items</string>

    <string name="mandatory_field">This field is mandatory!</string>

    <string name="permision_available_camera">Camera Permission has been granted. Preview can now be opened.</string>
    <string name="permision_available_contacts">Contacts Permissions have been granted. Contacts screen can now be opened.</string>
    <string name="permissions_not_granted">Permissions were not granted.</string>
    <string name="permission_camera_rationale">Camera permission is needed to show the camera preview.</string>
    <string name="permission_contacts_rationale">Contacts permissions are needed to demonstrate access.</string>
    <string name="mahmoud_turki">Mahmoud Turki</string>
    <string name="private_pentavalue_com">private@pentavalue.com</string>
    <string name="_01000548793">01000548793</string>
    <string name="_20th_dec_1992">20th, Dec. 1992</string>
    <string name="rate">Rate</string>


    <string name="search_quote">Instead of exhausting yourself in browsing thousands of categories and sub-categories like others!. Use our auto-complete <b>SMART SEARCH</b> to find your items in few seconds</string>
    <string name="search_all_items">Search all items</string>
    <string name="show_supermarkets">Show Supermarkets</string>
    <string name="open_camera">Open Camera</string>
    <string name="ongoing">Ongoing</string>
    <string name="items">Items</string>

    <string name="AED">AED</string>
    <string name="AED_saved">AED Saved</string>
    <string name="kg">0.5 Kg</string>
    <string name="orange_basket">Orange Basket</string>
    <string name="nothing_new_here">Nothing new in here</string>
    <string name="delivered">Delivered</string>
    <string name="no_action">No Action</string>
    <string name="order_number">Order Number</string>

    <string name="order_delivery_time">Delivery time</string>

    <string name="order_expected_delivery_time">Expected delivery time</string>
    <string name="order_total_price">Total Price</string>
    <string name="min_order">Min. Order</string>
    <string name="_20_aed">20 AED</string>
    <string name="_40_min">40 min</string>
    <string name="_5_aed">5 AED</string>
    <string name="you_can_add_more_address_from_your_profile">You can add more address from your profile</string>
    <string name="rate_market">Rate Market</string>
    <string name="no_item">No items</string>
    <string name="no_order">YOU HAVEN\'T ORDER ANYTHING YET</string>
    <string name="all_order">All you order will be displayed here</string>
    <string name="quantity">Quantity</string>
    <string name="checkout">Checkout</string>
    <string name="shopping_list">Shopping list</string>
    <string name="total_price">Total price</string>
    <string name="payment_method">Payment Method</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="now">Now</string>
    <string name="address_2_title">Address 2 title</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="order">Order</string>

    <string name="valid_phone">Please enter valid Bahrain phone length which is 8 digits</string>
    <!--
        14–15 Ice Cream Sandwich  4.0 – 4.0.4
        16–18 Jelly Bean	      4.1 – 4.3.1
        19–20 KitKat	          4.4 – 4.4.4
        21–22 Lollipop	          5.0 – 5.1.1
        23    Marshmallow	      6.0 – 6.0.1
        24    Nougat	          7.0
       -->
</resources>
