<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SignUpActivity">

    <include
        android:id="@+id/topBarLyt"
        layout="@layout/top_bar_two"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topBarLyt">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/firstNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:hint="@string/first_name"
                android:inputType="text"
                android:textSize="@dimen/mediumTextSize" />

            <EditText
                android:id="@+id/lastNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:hint="@string/last_name"
                android:inputType="text"
                android:textSize="@dimen/mediumTextSize" />

            <EditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/mediumTextSize" />

            <EditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="7"
                android:textAlignment="viewStart"
                android:textSize="@dimen/mediumTextSize" />

            <EditText
                android:id="@+id/confirmPasswordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLines="7"
                android:textAlignment="viewStart"
                android:textSize="@dimen/mediumTextSize" />

            <EditText
                android:id="@+id/phoneNumberET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="8"
                android:layout_margin="@dimen/margin_10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textSize="@dimen/mediumTextSize" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/we_may_call_for_validation_especially_after_first_order"
                android:textColor="@color/colorLightGreen"
                android:textSize="@dimen/smallestTextSize" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:text="@string/gender"
                android:textColor="@color/colorLightGray"
                android:textSize="@dimen/mediumTextSize" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10">

                <RadioGroup
                    android:id="@+id/radioSexGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_5"
                        android:button="@drawable/radio_button_selector"
                        android:checked="true"
                        android:text="@string/male"
                        android:textSize="@dimen/mediumTextSize" />

                    <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_5"
                        android:button="@drawable/radio_button_selector"
                        android:text="@string/female"
                        android:textSize="@dimen/mediumTextSize" />

                </RadioGroup>

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_2"
                android:layout_margin="@dimen/margin_10"
                android:background="@color/colorLightGray" />

            <LinearLayout
                android:id="@+id/birthDateLyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:padding="@dimen/padding_10"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date_of_birth"
                    android:textColor="@color/colorLightGray"
                    android:textSize="@dimen/mediumTextSize" />

                <TextView
                    android:id="@+id/birthDateTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dd_mm_yy"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/colorLightGreen"
                    android:textSize="@dimen/mediumTextSize" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_30"
                android:layout_margin="@dimen/margin_20"
                android:background="@android:color/transparent" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@color/colorDarkGreen"
        android:gravity="center_horizontal"
        android:padding="@dimen/padding_15">

        <TextView
            android:id="@+id/addDeliverAddressTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:background="@drawable/login_btn"
            android:gravity="center"
            android:padding="@dimen/padding_5"
            android:text="@string/add_delivery_address"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/mediumTextSize" />
    </LinearLayout>
</RelativeLayout>
