<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:showIn="@layout/list_item_supermarkets">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_3"
                android:padding="@dimen/padding_5"
                android:text="@string/min_order"
                android:textSize="@dimen/smallestTextSize" />

            <TextView
                android:id="@+id/minOrderTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_3"
                android:padding="@dimen/padding_5"
                android:text="@string/_20_aed"
                android:textColor="@color/colorLightGreen"
                android:textSize="@dimen/smallestTextSize" />
        </LinearLayout>

        <TextView
            android:id="@+id/supermarketPaymentTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_3"
            android:drawablePadding="@dimen/padding_5"
            android:drawableStart="@drawable/supermarket_cash"
            android:padding="@dimen/padding_5"
            android:text="@string/cash_depit_credit"
            android:textColor="@color/colorLightGreen"
            android:textSize="@dimen/smallestTextSize"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_3"
                android:drawablePadding="@dimen/padding_5"
                android:drawableStart="@drawable/supermarket_delivery"
                android:padding="@dimen/padding_5"
                android:text="@string/delivery_fees"
                android:textSize="@dimen/smallestTextSize" />

            <TextView
                android:id="@+id/deliveryFeesTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_3"
                android:padding="@dimen/padding_5"
                android:text="@string/_5_aed"
                android:textColor="@color/colorLightGreen"
                android:textSize="@dimen/smallestTextSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_3"
                android:padding="@dimen/padding_5"
                android:text="@string/delivery_time"
                android:textSize="@dimen/smallestTextSize" />

            <TextView
                android:id="@+id/deliveryTimeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_3"
                android:padding="@dimen/padding_5"
                android:text="@string/_40_min"
                android:textColor="@color/colorLightGreen"
                android:textSize="@dimen/smallestTextSize" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>